# excel-dates

./: .gitignore  pyproject.toml  setup.py
.github/workflows/: mypy.yml  publish.yml
test/: test_convert.py  test_doctests.py  test_excel_dates.py
